--- a/app/src/main/res/layout/drawing_screen.xml
+++ b/app/src/main/res/layout/drawing_screen.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:id="@+id/linear"
         android:layout_width="match_parent"
+        android:layout_marginTop="16dp"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
