--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -2,22 +2,9 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/projectPickFragment">
-
-    <fragment
-        android:id="@+id/projectPickFragment"
-        android:name="com.example.appachetestwork.fragments.ProjectPickFragment"
-        android:label="ProjectPickFragment" >
-        <action
-            android:id="@+id/action_projectPickFragment_to_drawingScreenFragment"
-            app:destination="@id/drawingScreenFragment" />
-    </fragment>
+    app:startDestination="@id/drawingScreenFragment">
     <fragment
         android:id="@+id/drawingScreenFragment"
         android:name="com.example.appachetestwork.fragments.DrawingScreenFragment"
-        android:label="DrawingScreenFragment" >
-        <argument
-            android:name="project_id"
-            app:argType="string" />
-    </fragment>
+        android:label="DrawingScreenFragment" />
 </navigation>
