color picker migration

--- a/app/src/main/res/layout/item_project.xml
+++ b/app/src/main/res/layout/item_project.xml
@@ -10,8 +10,7 @@
         android:id="@+id/img_project_preview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/project_preview"
-        android:src="@drawable/round_button" />
+        android:contentDescription="@string/project_preview" />
 
     <TextView
         android:id="@+id/text_project_name"
